--- a/src/app/components/person-table/person-table.component.html
+++ b/src/app/components/person-table/person-table.component.html
@@ -27,7 +27,7 @@
     </tr>
     <tr>
       <td class="fw-semibold text-end">Last Name</td>
-      <td class="ps-2">{{personInput?.surname}}</td>
+      <td class="ps-2">{{personInput?.surName}}</td>
     </tr>
     <tr>
       <td class="fw-semibold text-end">Age</td>
@@ -37,9 +37,17 @@
       <td class="fw-semibold text-end">Email</td>
       <td class="ps-2">{{personInput?.email}}</td>
     </tr>
-    <tr>
-      <td class="fw-semibold text-end">Address</td>
-      <td class="ps-2">{{personInput?.address}}</td>
-    </tr>
+    @if(isPerson()){
+      <tr>
+        <td class="fw-semibold text-end">Address</td>
+        <td class="ps-2">{{addressOReducation}}</td>
+      </tr>
+    }
+    @if(isPerson()){
+      <tr>
+        <td class="fw-semibold text-end">Education</td>
+        <td class="ps-2">{{addressOReducation}}</td>
+      </tr>
+    }
   </table>
 </div>
