--- a/src/app/components/template-driven-form-example/template-driven-form-example.component.html
+++ b/src/app/components/template-driven-form-example/template-driven-form-example.component.html
@@ -3,7 +3,7 @@
   <app-eperson-template-driven-form (person)="onPerson($event)"></app-eperson-template-driven-form>
   <div class="d-flex flex-column gap-4">
     <app-person-table></app-person-table>
-    <app-simple-datatable></app-simple-datatable>
+    <app-simple-datatable [data]="persons"></app-simple-datatable>
   </div>
 
 </div>
