--- a/src/app/components/user-registration/user-registration.component.html
+++ b/src/app/components/user-registration/user-registration.component.html
@@ -26,11 +26,10 @@
         <input type="text" matInput formControlName="email" (blur)="check_duplicate_email()">
         @if (form.get('email')?.hasError('duplicateEmail')) {
           <mat-error>Email is already registered</mat-error>
-        } @else {
-          @if (form.get('email')?.invalid && form.get('email')?.touched) {
-        <mat-error>Email is missing or invalid</mat-error>
-          }
+        } @else if(form.get('email')?.invalid && form.get('email')?.touched) {
+          <mat-error>Email is missing or invalid</mat-error>
         }
+
       </mat-form-field>
 
       <div class="d-flex gap-2" formGroupName="address">
@@ -58,11 +57,9 @@
         <input type="password" matInput formControlName="confirmPassword">
         @if(form.get("confirmPassword")?.hasError("passwordMismatch")){
           <mat-error>Password do not match</mat-error>
-        } @else {
-          @if(form.get("confirmPassword")?.invalid && form.get("confirmPassword")?.touched){
-            <mat-error>Confirm Password is missing or invalid</mat-error>
-          }
-        }      
+        } @else if (form.get("confirmPassword")?.invalid && form.get("confirmPassword")?.touched){
+          <mat-error>Confirm Password is missing or invalid</mat-error>
+          }     
       </mat-form-field>
 
       <button
