--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -16,3 +16,10 @@
   </button>
 
 </form>
+
+<div class="mt-2">
+  <button class="btn btn-primary" (click)="googleLogin()">
+    Login with Google
+  </button>
+
+</div>
